# SpectralDock

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.physx  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
assets/examples/: manifest.md  model-manifest.json
assets/examples/environments/: assembly-hall-noon.hdr  radiance-pavilion.hdr
assets/examples/models/: CC0-1.0.txt
assets/examples/models/capsule-mascot/: manifest.json
assets/examples/models/showcase-panel/: manifest.json  showcase-panel-metallic-roughness.avif  showcase-panel-normal.avif
assets/examples/models/sparky/: manifest.json  sparky.mtl  sparky_albedo.avif
assets/examples/textures/: assembly-hall-gear-alpha.avif  planet-azure.avif  planet-ember.avif
cmake/: FindPhysX.cmake  physx-python.cmake  spectraldock-linux-gcc-gpu.xml
containers/test/: Dockerfile
docs/: ASSETS.md  BENCHMARK.md  EXAMPLES.md  PHYSX_SCENE.md  PYTHON_API.md  RELEASE_CHECKLIST.md  SCENE_FORMAT.md  STATUS.md
docs/gallery/: benchmark-harbor.avif  benchmark-harbor.stats.json  celestial-archive.avif  celestial-archive.stats.json  ember-forge.avif  ember-forge.stats.json  kinetic-foundry.avif  kinetic-foundry.physics.json  kinetic-foundry.stats.json  lava-temple-oracle.avif  lava-temple-oracle.physics.json  lava-temple-oracle.stats.json  material-cathedral.avif  material-cathedral.stats.json  moonlit-stepwell.avif  moonlit-stepwell.stats.json  neon-koi.avif  neon-koi.stats.json  radiance-pavilion.avif  radiance-pavilion.stats.json  reflector-laboratory.avif  reflector-laboratory.stats.json  rocket-test-stand.stats.json
docs/gallery/comparisons/: beer-absorption-off.avif  beer-absorption-on.avif  denoiser-off.avif  denoiser-on.avif  environment-importance-off.avif  environment-importance-on.avif  firefly-clamp-off.avif  firefly-clamp-on.avif  indirect-light-off.avif  indirect-light-on.avif  normal-mapping-off.avif  normal-mapping-on.avif
docs/gallery/showcase/: assembly-hall.avif  atelier.avif  tidal-observatory.avif
docs/technical-report/: 01-vectors-rays-and-camera.md  02-light-and-rendering-equation.md  03-materials-and-bsdf.md  04-monte-carlo-path-tracing.md  05-direct-lighting-and-mis.md  06-geometry-visibility-and-bvh.md  06-hdr-environment-and-importance-sampling.md  07-geometry-visibility-and-bvh.md  07-optix-gpu-implementation.md  08-denoising-color-and-output.md  08-optix-gpu-implementation.md  09-denoising-color-and-output.md  09-limitations-performance-and-validation.md  10-physx-rigid-body-scene-baking.md  10-procedural-volumetric-flame.md  11-procedural-volumetric-flame.md  11-runtime-analytic-water.md  12-physx-rigid-body-scene-baking.md  12-runtime-analytic-water.md  13-hdr-environment-and-importance-sampling.md  13-limitations-performance-and-validation.md  README.md
include/spectraldock/: device_types.h  integrator_policy.h  math.h  obj_loader.h  optix_renderer.h  sampling.h  scene_builder.h  scene_types.h
python/spectraldock/: __init__.py  _renderer.py  physics.py
scenes/: assembly-hall.py  atelier.py  benchmark-harbor.json  benchmark-harbor.py  celestial-archive.json  celestial-archive.py  compare-hdr-sampling.py  compare-light-transport.py  compare-normal-mapping.py  compare-water-absorption.py  ember-forge.json  ember-forge.py  kinetic-foundry.py  lava-temple-oracle.py  material-cathedral.json  material-cathedral.py  moonlit-stepwell.json  moonlit-stepwell.py  neon-koi.json  neon-koi.py  radiance-pavilion.json  radiance-pavilion.py  reflector-laboratory.json  reflector-laboratory.py  rocket-test-stand.json  tidal-observatory.py
scripts/: acceptance.sh  activate.sh  build-image.sh  build-physx-image.sh  build.sh  common.sh  configure.sh  environment-smoke.sh  generate-physx-scene.sh  optix-sdk-smoke.sh  render-examples.sh  render-physx-scene.sh  sanitizers.sh  spectraldock.sh  test-host.sh  test.sh
src/: device_programs.cu  image_io.cpp  main.cpp  obj_loader.cpp  optix_renderer.cpp  postprocess.cu  python_bindings.cpp  sampling.cpp  scene.cpp  scene_builder.cpp
tests/: avif_test_utils.py  check_delta_lights_and_firefly.py  check_environment_importance.py  check_flame_transport.py  check_integrator_mis.py  check_light_importance.py  check_mesh_smoke.py  check_multi_material_mesh_smoke.py  check_pbr_materials.py  check_physx_gpu_only.py  check_radiance_pavilion_importance.py  check_ray_spawning.py  check_rough_dielectric_nee.py  check_shading_normals.py  check_water_time_to_error.py  check_water_transport.py  cuda_device_query.cu  test_assembly_hall_assets_generator.py  test_assets.py  test_atelier_scene_contract.py  test_avif_assets.py  test_benchmark_harbor.py  test_core.cpp  test_gallery_scene_factories.py  test_generate_mascot.py  test_hdr_environment_generator.py  test_mascot_scenes.py  test_multi_material_mesh_api.py  test_pbr_material_api.py  test_physx_assembly_hall_contract.py  test_physx_gallery_wiring.py  test_physx_lava_temple_oracle_contract.py  test_physx_scene_contract.py  test_python_api_cleanup.py  test_repository_hygiene.py  test_showcase_panel_generator.py  test_sparky_asset.py  test_technical_report_snippets.py  test_technical_report_structure.py
tests/assets/: multi-material-mesh.mtl
tests/golden/: mesh-composite-smoke-64x64-spp1-depth6-seed1.sha256
tests/scenes/: delta-light-smoke.json  delta-light-smoke.py  environment-smoke.json  environment-smoke.py  flame-smoke.json  flame-smoke.py  geometry-smoke.json  geometry-smoke.py  light-shapes-smoke.json  mesh-composite-smoke.json  mesh-composite-smoke.py  multi-material-mesh-smoke.py  smoke.json  smoke.py  water-smoke.json  water-smoke.py
tools/: check_physx_lava_temple_oracle.py  check_physx_scene.py  generate_assembly_hall_assets.py  generate_benchmark_harbor.py  generate_hdr_environment.py  generate_mascot.py  generate_physx_kinetic_foundry.cpp  generate_physx_lava_temple_oracle.cpp  generate_showcase_panel.py  physx_worker.cpp
(+1 files in other folders)
